kubernetes/learning_kuber_reza/ingress_controller/application/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /webapp1(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webapp1-svc
            port:
              number: 80
      - path: /webapp2(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webapp2-svc
            port:
              number: 80
  - host: kube.softgrand.ir # change the IP address here
    http:
      paths:
      - path: /webapp1
        pathType: ImplementationSpecific
        backend:
          service:
            name: webapp1-svc
            port:
              number: 80
      - path: /webapp2
        pathType: ImplementationSpecific
        backend:
          service:
            name: webapp2-svc
            port:
              number: 80
