kubernetes/learning_kuber_reza/ingress_controller/application/ssl-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-tls-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - kube.softgrand.ir # update IP address here
      secretName: app-web-cert
  rules:
    - host: kube.softgrand.ir # update IP address here
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp2-svc
                port:
                  number: 80
